--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,17 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.4",
-        "laravel/framework": "^6.20.26",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "^7.0",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
-        "facade/ignition": "^1.16.15",
+        "facade/ignition": "^2.1",
         "fakerphp/faker": "^1.9.1",
-        "laravel/ui": "^1.0",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
+        "laravel/ui": "^2.0",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5.8|^9.3.3"
     },
     "config": {
