--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "phpunit/phpunit": "^9.5"
     },
     "require-dev": {
         "facade/ignition": "^2.1",
         "fakerphp/faker": "^1.9.1",
         "laravel/ui": "^2.0",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "nunomaduro/collision": "^4.1"
     },
     "config": {
         "optimize-autoloader": true,
